--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#62bd69">
+  <meta name="theme-color" content="#22ac16">
 </head>
 <body>
   <app-root></app-root>
