--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#22ac16">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
   <app-root></app-root>
