--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <app-root></app-root>
+    <sg-root></sg-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
     >
